Start refactoring tests